# ecosystem

./: .env.example  .gitignore  README.md  docker-compose.keycloak.yml  docker-compose.service.yml  docker-compose.yml  docker-compose.yml.save  docker-compose.yml.save.1  docker-compose.yml.save.2  package.json
api/: .babelrc  .env.example  Dockerfile  docker-compose.yml  package.json  x.js
api/mongo/: init.sh
api/rust-2/: Cargo.toml  README.md
api/rust-2/src/: lib.rs
api/rust-2/src/protocol/: kdcerror.rs
api/rust-2/src/protocol/abe/: mod.rs
api/rust-2/src/protocol/ecies/: keys.rs  mod.rs  pure_rust_backend.rs
api/src/: seed.js  server.js  test.js
auction-client/: .env.example  Dockerfile  README.md  truffle-config.js
auction-client/src/: App.js  index.css  index.js
dms/: .env.example  Dockerfile  README.md  index.html  package.json  vite.config.js
dms/src/: App.vue  main.js
keycloak/: .D.swp  .env.example  Dockerfile  Dockerfile.save  db-sample.sql  demo-realm.json  docker-compose.yml
keycloak/backup/: db_backup_2023-01-11T03-00-00Z.tgz  db_backup_2023-01-11T07-20-00Z.tgz  db_backup_2023-01-11T07-32-25Z.tgz
keycloak/init/: init-database.sql
mongo/: Dockerfile  init.sh
test/: docker-compose.yml
test/keycloak/: Dockerfile  demo-realm.json
wallet-management/: .env.example  docker-compose.yml  index.html  package.json  vite.config.js
wallet-management/.nginx/: nginx.conf
wallet-management/nginx/: nginx.conf
wallet-management/public/: index.html
wallet-management/src/: App.vue  NiceToken.json  index.js  main.js
(+227 files in other folders)
