[package]
name = "abe_native"
version = "0.1.0"
edition = "2021"
authors = ["hg <quangnd@hiworld.com.vn>"]
repository = "https://git.grooo.vn/ca/dms-kdc-blockchain.git"

[lib]
crate_type = ["cdylib"]

[profile.dev]
opt-level = 0               # Use slightly better optimizations.

[dependencies]
actix-rt = "1.1.0"
actix-web = "3.0.0-alpha.1"
serde_json = "1.0.64"
serde = "1.0.106"
serde_cbor = "0.11.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.6", features = ["serde", "v4"] }
env_logger = "0.7.1"
borsh = { version = "0.9.3", optional = true, default-features = false }
rustc-hex = "2.1.0"
deflate = "0.9.0"
inflate = "0.4.5"
clap = "2.33.3"
pest = "2.0"
pest_derive = "2.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
rabe = "0.3.1"
curve25519-dalek = "3.1.0"
digest = "0.9.0"
hex = "0.4.3"
hkdf = "0.10.0"
sha2 = "0.9.3"
thiserror = "1.0.24"
zeroize = "1.3.0"
aes-gcm = "0.8.0"
k256 = { version = "0.11.2", features = ["ecdsa", "ecdsa-core"] }
ed25519-dalek = "1.0.1"
backtrace = "0.3"
jni = "0.19.0"
web3 = "0.18.0"
libc = "0.2"
